webserver.yaml
apiVersion: apps/v1beta1 # for versions before 1.6.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: webserver
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webserver
    spec:
      volumes:
        - name: local
          emptyDir: {}
      containers:
        - name: server
          image: docker.io/dkimot/jumprope-webserver
